--- a/login/login.css
+++ b/login/login.css
@@ -2,21 +2,42 @@ body{
     background-color: rgb(248, 247, 242);
     margin: 0px;
 }
+.nav .burger{
+    position: absolute;
+    top: 15px;
+    left: 10%;
+display: none;
+}
+.line{
+    height: 5px;
+    width: 20px;
+    margin: 3px;
+    background-color: black;
+}
  .nav {
      width: 100%;
     display: flex;
     background-color:white;
-    height: 50px;
-    padding: 25px 0 0 20px ;
+    /* height: 50px; */
+    height: auto;
+    padding: 25px 0 18px 20px ;
     border-radius: 5px;
     justify-content: space-between;
     position: fixed;
     top: 0px;
     left:0px;
+    font-family: 'Roboto', sans-serif;
 
 }
+.nav > div{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
 .img{
     width: 10%;
+    margin-top: -15px;
     height: 20px;
 }
 .left{
@@ -29,11 +50,19 @@ body{
 a{
     color: #303030;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 200;
+    font-size: 1.1em;
     font-family: FavoritFreshly,Helvetica Neue,Helvetica,Arial,sans-serif;;
 }
 a:hover{
     color: blue;
+    border-bottom: 1px solid blue;
+}
+.nav .btn-r{
+    display: none;
+    position: absolute;
+    top: 20px;
+    right: 10%;
 }
 .btn{
     display: inline-block;
@@ -43,7 +72,7 @@ a:hover{
     margin-top: -13px;
     width: 120px;
     margin-right: 20px;
-    height: 50px;
+    height: 38px;
     border: 1px;
     font-size: 20px;
 }
@@ -51,7 +80,7 @@ a:hover{
     background-color: rgb(32, 99, 243);
 }
 #box{
-    width: 32%;
+    width: 459px;
     height: 450px;
     margin: auto;
 }
@@ -68,13 +97,13 @@ p{
     margin: 0px;
 }
 .inp{
-    width: 500px;
+    width: 100%;
     height: 35px;
     margin-top: 15px;
     margin-bottom: 15px;
 }
 .submit{
-    width: 507px;
+    width: 100%;
     height: 40px;
     background-color: rgb(42,109,255);
     font-weight: bold;
@@ -96,12 +125,12 @@ p{
 #box2{
     width: 100%;
     background-color: white;
-    height: 400px;
+    height: auto;
    
 }
 .box3{
     width: 75%;
-    height: 400px;
+    height: auto;
     margin: auto;
     display: flex;
     justify-content: space-around;
@@ -111,6 +140,10 @@ p{
     height: 300px;
     margin-top: 40px;
     
+}
+.bottompage img{
+    width: 200px;
+    margin: 10px 0px;
 }
 .btp{
     color: rgb(126,145,170);
