--- a/plans/plan.css
+++ b/plans/plan.css
@@ -168,7 +168,7 @@ font-family: 'Roboto', sans-serif;
 }
 .a_question {
     width: 80%;
-    height: 50px;
+    height: auto;
     display: flex;
     justify-content: space-between;
     text-align: center;
@@ -180,7 +180,7 @@ font-family: 'Roboto', sans-serif;
 }
 .a_answer {
     width: 80%;
-    height: 150px;
+    height: auto;
     margin: auto;
     display: none;
     font-family: FavoritFreshly,Helvetica Neue,Helvetica,Arial,sans-serif;
