--- a/home-page/phone.css
+++ b/home-page/phone.css
@@ -1,3 +1,10 @@
+
+@media screen and (min-width:1091px) {
+    #card2 >div{
+        /* bottom: 500px; */
+        top: 600px;
+    }    
+}
 @media screen and (max-width:1090Px){
     #start #container{
         width: 100%;
