--- a/plan-menu/plan.css
+++ b/plan-menu/plan.css
@@ -32,6 +32,12 @@ body{
     color: skyblue;
     border-bottom: 2px solid skyblue; 
 }
+#head span{
+    color: rgb(44, 221, 21);
+}
+#head #lgreen{
+    color: rgb(18, 58, 20);
+}
 
 /* NAVBAR SECTION  */
 
